# huggingface_model_deployment

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO  docker-compose-full.yml  docker-compose.yml  helm-chart-sentiment-app-1.0.0.tgz  noxfile.py  pyproject.toml
.github/workflows/: ci-cd.yaml
docker/: Dockerfile  fastapi.Dockerfile  gradio.Dockerfile  testjob.Dockerfile
helm-app-chart/: Chart.yaml  values.yaml
helm-app-chart/templates/: fastapi-deployment.yaml  gradio-deployment.yaml  gradio-service.yaml  sentiment-ingress-resource.yaml
helm-chart-sentiment-app/: Chart.yaml  values.yaml
helm-chart-sentiment-app/templates/: fastapi-configmap.yaml  fastapi-deployment.yaml  fastapi-secret.yaml  fastapi-service.yaml  gradio-deployment.yaml
k8s/: fastapi-configmap.yaml  fastapi-deployment.yaml  fastapi-service.yaml  gradio-deployment.yaml  gradio-service.yaml  namespace.yaml  sentiment-ingress-resource.yaml
notebooks/: hf_fine_tune_experiments.ipynb
promtail/: promtail-config.yml
src/: gradio_interface.py  main.py  model_utils.py
tests/integration/: test_integration.py
tests/unit/: test_gradio_interface.py  test_main.py  test_model_utils.py
