[tool.poetry]
name = "huggingface-model-deployment"
version = "0.1.0"
description = "LLM movie sentiment analysis with a FastAPI backend with a Gradio UI"
authors = ["kristofar.stavrev <kristofar.stavrev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.0"
transformers = "^4.46.0"
peft = "^0.14.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[tool.poetry.group.ui.dependencies]
gradio = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
nox = "^2025.2.9"
pip-audit = "^2.8.0"
bandit = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
